tests/should_fail/match_duplicate_char_arm.nv
// should_fail: Duplicate char literal arms in value match
module match_duplicate_char_arm
let c = 'a'
match c {
    'a' => println("a"),
    'b' => println("b"),
    'a' => println("a again"),
    _ => println("other")
}
